--- a/assets/stylesheets/theme/_tooltips.scss
+++ b/assets/stylesheets/theme/_tooltips.scss
@@ -41,6 +41,6 @@
 	@media all and (max-width: 768px) {
 		max-width: 290px !important;
 		font-size: 14px;
-		padding: 15px;
+		padding: 10px;
 	}
 }
